# pedalboard

./: .gitignore  Board.qml  CMakeLists.txt  Main.qml  PedalBoard.qml  PedalPreview.qml  README.md  Title.qml  TitleLine.qml  main.cpp
components/: AmpPedal.qml  ChorusPedal.qml  DelayPedal.qml  DistortionPedal.qml  FuzzPedal.qml  ReverbPedal.qml  TremoloPedal.qml
pedals/: AmpPedal.qml  CMakeLists.txt  ChorusPedal.qml  DelayPedal.qml  DeviceKnob.qml  DeviceSwitch.qml  DeviceText.qml  DistortionPedal.qml  FuzzPedal.qml  InfoText.qml  ReverbPedal.qml  ScrewImage.qml  SwitchImage.qml  TremoloPedal.qml
